# life-satisfaction-ml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: data.csv  features_data.csv
models/: linear_model.pkl  xgb_model.pkl
notebooks/: 01_cleaning.ipynb  02_features.ipynb  03_eda.ipynb  04_modeling.ipynb
src/: cli.py  config.py  data.py  visualization.py
src/lifesat_ml/: cli.py  data.py  model.py
src/lifesat_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
