[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifesat-ml"
version = "0.1.0"
description = "Life Satisfaction Prediction using Machine Learning and SHAP"
readme = "README.md"
authors = [{ name = "Cetin ERDEM" }]
license = { text = "MIT" }

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "shap"
]

[project.urls]
Homepage = "https://github.com/yourusername/life-satisfaction-ml"

[project.scripts]
lifesat-cli = "lifesat_ml.cli:main"